test/compile-fail/resolution/redefinition-struct-use/expected.txt
error: the name `a` is defined multiple times
 --> top.rhdl:5:7
  |
1 | struct a {}
  |        - previous definition of the type `a` here
5 | use b::a;
  |        ^ `a` redefined here
